|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? ????, PHP 8.2.25

- Core:
  . Fixed bug GH-15712: zend_strtod overflow with precision INI set on
    large value. (David Carlier)
  . Fixed bug GH-15905 (Assertion failure for TRACK_VARS_SERVER). (cmb)
  . Fixed bug GH-15907 (Failed assertion when promoting Serialize deprecation to
    exception). (ilutov)

- Date:
  . Fixed bug GH-15582: Crash when not calling parent constructor of
    DateTimeZone. (Derick)
  . Fixed regression where signs after the first one were ignored while parsing
    a signed integer, with the DateTimeInterface::modify() function. (Derick)

- DOM:
  . Fixed bug GH-16039 (Segmentation fault (access null pointer) in
    ext/dom/parentnode/tree.c). (nielsdos)

- LDAP:
  . Fixed bug GH-16032 (Various NULL pointer dereferencements in
    ldap_modify_batch()). (Girgias)

- PHPDBG:
  . Fixed bug GH-15901 (phpdbg: Assertion failure on i funcs). (cmb)

- SimpleXML:
  . Fixed bug GH-15837 (Segmentation fault in ext/simplexml/simplexml.c).
    (nielsdos)

- SOAP:
  . Fixed bug #62900 (Wrong namespace on xsd import error message). (nielsdos)

- Standard:
  . Fixed bug GH-15613 (overflow on unpack call hex string repeater).
    (David Carlier)

- Streams:
  . Fixed bugs GH-15908 and GH-15026 (leak / assertion failure in streams.c).
    (nielsdos)
  . Fixed bug GH-15980 (Signed integer overflow in main/streams/streams.c).
    (cmb)

- TSRM:
  . Prevent closing of unrelated handles. (cmb)

- XML:
  . Fixed bug GH-15868 (Assertion failure in xml_parse_into_struct after
    exception). (nielsdos)

26 Sep 2024, PHP 8.2.24

- CGI:
  . Fixed bug GHSA-p99j-rfp4-xqvq (Bypass of CVE-2024-4577, Parameter Injection
    Vulnerability). (CVE-2024-8926) (nielsdos)
  . Fixed bug GHSA-94p6-54jq-9mwp (cgi.force_redirect configuration is
    bypassable due to the environment variable collision). (CVE-2024-8927)
    (nielsdos)

- Core: